# bloknot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
bloknot/core/: note.py
bloknot/infra/: alembic.py
bloknot/infra/rest/: notes.py
bloknot/rest/: notes.py
bloknot/runner/: __main__.py  cli.py  config.py  factory.py
migrations/versions/: 62dd4c092785_create_notes.py
